tests/sksl/errors/golden/BitShiftFloatMatrix.glsl
### Compilation failed:

error: 5: type mismatch: '>>=' cannot operate on 'float2x2', 'int'
error: 6: type mismatch: '<<=' cannot operate on 'float2x2', 'int'
error: 7: type mismatch: '&=' cannot operate on 'float2x2', 'int'
error: 8: type mismatch: '|=' cannot operate on 'float2x2', 'int'
error: 9: type mismatch: '^=' cannot operate on 'float2x2', 'int'
error: 11: type mismatch: '>>' cannot operate on 'float2x2', 'int'
error: 12: type mismatch: '<<' cannot operate on 'float2x2', 'int'
error: 13: type mismatch: '&' cannot operate on 'float2x2', 'int'
error: 14: type mismatch: '|' cannot operate on 'float2x2', 'int'
error: 15: type mismatch: '^' cannot operate on 'float2x2', 'int'
10 errors
